<resources>
    <string name="app_name">Thrifty</string>
    <string name="app_slogan">Your favourite online thrift shop!!</string>
    <string name="log_in_text">Have an account? Log in</string>
    <string name="sign_up_text">Join Now</string>
    <string name="admin_text">Admin ?</string>
    <string name="log_in_txt">Log In</string>
    <string name="forgot_password_txt">Forgot Password ?</string>
    <string name="remember_me_txt">Remember Me</string>
    <string name="password_hint">Password</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="register_txt">Create Account</string>
    <string name="slogan_text_hint">Add new product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile_user_name">User Name</string>
</resources>